cargo-features = ["strip"]

[package]
name = "arduino"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "0258ed5"
features = ["arduino-uno"]

[profile.release]
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
strip = true